# Notes

./: .gitignore  README.md  index.html  package-lock.json  package.json  preview.html  vite.config.ts
.github/workflows/: build.yml  release.yml
.github/workflows/.github/workflows/: build.yml
src/: App.tsx  changelog.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: [email protected]
src-tauri/src/: lib.rs  main.rs
src/components/: AchievementsModal.tsx  CalendarModal.tsx  ChangelogModal.tsx  ColorCustomizer.tsx  GamificationBar.tsx  Header.tsx  ReminderAlert.tsx  ReminderDialog.tsx  SearchBar.tsx  Settings.tsx  TaskInput.tsx  TaskItem.tsx  TaskList.tsx  UpdateBanner.tsx  UpdateButton.tsx  UpdatePopup.tsx
src/db/: database.ts
src/gamification/: achievements.ts
src/hooks/: useChangelog.ts  useColors.ts  useGamification.ts  useHotkeys.ts  useReminders.ts  useTasks.ts  useTheme.ts  useTypography.ts  useUpdate.ts
src/i18n/: i18n.tsx  translations.ts
src/lib/: sound.ts  time.ts
